force-app/main/default/objects/BOT_Specialty_Provider_JO__c/BOT_Specialty_Provider_JO__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is a junction object between Speciality providers and Account.</description>
    <label>Specialty Provider JO</label>
    <nameField>
        <displayFormat>SP - {00000}</displayFormat>
        <label>Specialty Provider JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>