force-app/main/default/objects/BOT_Specialty_Provider_JO__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <description>Master-detail relationship to Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specialty Providers</relationshipLabel>
    <relationshipName>Specialty_Providerw</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>