force-app/main/default/objects/BOT_Specialty_Provider_JO__c/fields/BOT_Specialty_Provider__c.field-meta.xml
<CustomField>
    <fullName>BOT_Specialty_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup relationship to Account.</description>
    <label>Specialty Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Specialty_Providerw1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>