force-app/main/default/objects/BOT_Specialty_Provider_JO__c/fields/BOT_Specialty_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Specialty_Provider_ID__c</fullName>
    <description>To store the BOT specialty provider Id (BOT Entity Id). It is used for BOT internal reference.</description>
    <label>Specialty Provider ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>