force-app/main/default/objects/BOT_Specialty_Provider_JO__c/fields/BOT_Website__c.field-meta.xml
<CustomField>
    <fullName>BOT_Website__c</fullName>
    <description>Used to store the name of the Speciality Provider website.</description>
    <formula>BOT_Specialty_Provider__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>